--- a/APP1/src/app/home/home.page.html
+++ b/APP1/src/app/home/home.page.html
@@ -1,20 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      APP Iris Correa
+      APP Calculator
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true"><br>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Iris <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-item>
+    <ion-label>Number 1</ion-label>
+    <ion-input name="n1" ngModel></ion-input>
+  </ion-item> <br>
+  <ion-item>
+    <ion-label>Number 2</ion-label>
+    <ion-input name = "n2" ></ion-input>
+  </ion-item>
+  
+ 
+
 </ion-content>
